Spacing fixes in Index.html

--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@
     flex: 1;
     height: 100vh;
     background-color: #f3f4ef;
-    padding-top: 30px;
+    padding-top: 10px;
 }
 
 .main__container {
@@ -198,7 +198,7 @@
     padding: 0px 25%;
     text-align: center;
     padding-top: 30px;
-    padding-bottom: 10px;
+    margin-bottom: 0;
 }
 
 /*Mobile*/
@@ -301,6 +301,6 @@
     background-color: #49494a;
     color: white;
     font-size: 0.9em;
-    margin-top: 0px;
+    margin-top: 25px;
     border-top: 1px solid #ccc;
 }
